# webserver

webserver/: CMakeLists.txt  webserver.cpp  webserver.h
webserver/networking/: net.hpp
webserver/networking/client/: client.cpp  clientconfig.hpp
webserver/networking/server/: detect.cpp  detect.hpp  server.cpp  serverconfig.hpp
